--- a/Themes/SRDAutumnSky.ini
+++ b/Themes/SRDAutumnSky.ini
@@ -1,4 +1,5 @@
-[SRDTheme]
+[SRDTheme] 
+ThemeInfo=This is a really old theme that I've dragged along from SRDSciPad®,#13SRDTrayPad and several others. Still one of my favorites.
 ThemeName=SRDAutumnSky
 ThemeDisplayName=SRDAutumn Sky
 ThemeType=ttAuto
