--- a/Themes/SRDGraphite.ini
+++ b/Themes/SRDGraphite.ini
@@ -1,4 +1,5 @@
 [SRDTheme]
+ThemeInfo=This is an old theme from my SRDSciPad® days#13that I reworked for use in my SRDJournal.
 ThemeName=SRDGraphite
 ThemeDisplayName=SRDGraphite
 ThemeType=ttAuto
@@ -8,6 +9,7 @@ ThemeFontColor=$00c0c0c0
 PanelColor=NoColor
 PanelLight=NoColor
 PanelDark=NoColor
+PanelLeft=$000046D9,-25
 VTColor=$00323232
 VTColorFont=NoColor
 PanelFont=NoColor
@@ -25,7 +27,7 @@ EditorFontColor=$00d6d6d6
 EditorActiveLine=$00884a00
 EditorSelColor=$000046D9
 LineNumbers=$00444444
-LineNumbersFont=ThemeFontColor,30
+LineNumbersFont=$000080FF
 HTMLBgndColor=NoColor
 HTMLTextColor=NoColor
 ColorHover=NoColor
