--- a/Themes/SRDKami.ini
+++ b/Themes/SRDKami.ini
@@ -7,9 +7,10 @@ ThemeColor=ThemeIndex
 ThemeFontColor=-ThemeIndex
 PanelColor=NoColor
 PanelLight=ThemeIndex,-10
-PanelDark=$002d2f30
-VTColor=PanelDark
-VTColorFont=ThemeIndex,-10
+PanelDark=$00e7ebef
+PanelLeft=$000046D9
+VTColor=$002d2f30
+VTColorFont=NoColor
 PanelFont=NoColor
 PanelLightFont=NoColor
 PanelDarkFont=$000073ff
