--- a/Themes/SRDSandalWood.ini
+++ b/Themes/SRDSandalWood.ini
@@ -8,6 +8,7 @@ ThemeFontColor=NoColor
 PanelColor=NoColor
 PanelLight=NoColor
 PanelDark=NoColor
+PanelLeft=$004070a0
 VTColor=$00003060
 VTColorFont=$00003060,85
 PanelFont=NoColor
