--- a/Themes/SRDSciPad.ini
+++ b/Themes/SRDSciPad.ini
@@ -8,6 +8,7 @@ ThemeFontColor=NoColor
 PanelColor=NoColor
 PanelLight=NoColor
 PanelDark=NoColor
+PanelLeft=$00000066
 VTColor=$00222222
 VTColorFont=VTColor,85
 PanelFont=NoColor
