--- a/Themes/SRDXWing.ini
+++ b/Themes/SRDXWing.ini
@@ -8,6 +8,7 @@ ThemeFontColor=NoColor
 PanelColor=NoColor
 PanelLight=NoColor
 PanelDark=clBlack,-30
+PanelLeft=clMaroon
 VTColor=clBlack
 VTColorFont=clBlack,85
 PanelFont=clWhite
@@ -21,6 +22,7 @@ TitleBarInactive=TitleBarActive,20
 TitleBarFont=NoColor
 EditorColor=clBlack
 EditorFontColor=clBlack,85
+EditorSelColor=$000046D9
 LineNumbers=$00434343
 LineNumbersFont=clWebOrange
 HTMLBgndColor=NoColor
